--- a/Uber-Clone/Base.lproj/Main.storyboard
+++ b/Uber-Clone/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                 <color key="textColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="rider@gmail.com" borderStyle="roundedRect" placeholder="email@server.domain" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sw5-SS-qil">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="driver@gmail.com" borderStyle="roundedRect" placeholder="email@server.domain" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sw5-SS-qil">
                                 <rect key="frame" x="20" y="105" width="335" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="KJV-Sv-gTp"/>
@@ -274,7 +274,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <action selector="acceptTapped:" destination="lQ6-mh-lue" eventType="touchUpInside" id="11n-25-avc"/>
+                                    <action selector="acceptRequestPressed:" destination="lQ6-mh-lue" eventType="touchUpInside" id="KKy-bW-YY1"/>
                                 </connections>
                             </button>
                         </subviews>
